@@ -393,6 +393,7 @@ CGImageRef UIGetScreenImage(void);
 }
 
 - (void) updateBox: (ZBarSymbol*) sym
+         imageSize: (CGSize) size
 {
     [CATransaction begin];
     [CATransaction setAnimationDuration: .3];
@@ -403,9 +404,9 @@ CGImageRef UIGetScreenImage(void);
     CGFloat alpha = boxLayer.opacity;
     if(sym) {
         CGRect r = sym.bounds;
-        // FIXME reverse image scaling
-        //r = crop.origin + ;
         if(r.size.width > 16 && r.size.height > 16) {
+            r.origin.x += scanCrop.origin.y * size.width;
+            r.origin.y += scanCrop.origin.x * size.height;
             r = CGRectInset(r, -16, -16);
             if(alpha > .25) {
                 CGRect frame = boxLayer.frame;
@@ -437,6 +438,7 @@ CGImageRef UIGetScreenImage(void);
 
     [self scanImage: image
           withScaling: 0];
+    CGSize size = CGSizeMake(CGImageGetWidth(image), CGImageGetHeight(image));
     CGImageRelease(image);
 
     ZBarSymbol *sym = [self extractBestResult: NO];
@@ -469,7 +471,8 @@ CGImageRef UIGetScreenImage(void);
           withObject: nil
           afterDelay: 0.001];
 
-    [self updateBox: sym];
+    [self updateBox: sym
+          imageSize: size];
 }
 
 - (void) captureScreen
@@ -529,6 +532,7 @@ CGImageRef UIGetScreenImage(void);
                     [NSArray arrayWithObject: sym],
                         ZBarReaderControllerResults,
                     nil]];
+    CGSize size = image.size;
     [image release];
 
     // reschedule
@@ -536,7 +540,8 @@ CGImageRef UIGetScreenImage(void);
           withObject: nil
           afterDelay: 0.001];
 
-    [self updateBox: sym];
+    [self updateBox: sym
+          imageSize: size];
 }
 
 - (void) showHelpWithReason: (NSString*) reason
